<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_background">

    <ImageButton
            android:id="@+id/back_button"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:layout_marginTop="10dp"
            android:foreground="?selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"/>

    <ImageView
            android:id="@+id/card"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            android:src="@drawable/ic_card"
            android:scaleType="fitXY"
            android:layout_width="100dp"
            android:layout_height="70.24dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/title" app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
            android:id="@+id/title"
            android:textColor="@android:color/white"
            android:text="@string/card_preming_title"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/card"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            android:layout_width="0dp"
            android:textSize="28sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/subtitle"/>

    <TextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:alpha="0.8"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            android:text="@string/card_preming_subtitle"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/register_new_card"/>

    <Button
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/register_new_card"
            android:text="@string/register_card"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="48dp" style="@style/GreenButton"/>


    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_left"
            app:layout_constraintGuide_begin="20dp"
            android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_right"
            app:layout_constraintGuide_end="20dp"
            android:orientation="vertical"/>


</androidx.constraintlayout.widget.ConstraintLayout>