<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_background">

        <ImageButton
                android:id="@+id/back_button"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:layout_marginTop="10dp"
                android:foreground="?selectableItemBackgroundBorderless"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back"/>

        <ImageView
                android:id="@+id/avatar"
                app:layout_constraintTop_toBottomOf="@+id/back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="fitXY"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

        <TextView
                android:id="@+id/userName"
                app:layout_constraintTop_toBottomOf="@+id/avatar"
                app:layout_constraintStart_toStartOf="@+id/avatar"
                app:layout_constraintEnd_toEndOf="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"
                tools:text="zelda.williams"
        />

        <me.abhinay.input.CurrencyEditText
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:fontFamily="sans-serif-light"
                android:textSize="54sp"
                android:digits="1234567890"
                android:inputType="number"
                android:singleLine="true"
                android:hint="0,00"
                android:lines="1"
                android:maxLines="1"
                android:maxWidth="300dp"
                android:textColorHint="@color/payment_amount_hint"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/userName">
            <requestFocus/>
        </me.abhinay.input.CurrencyEditText>

        <TextView
                android:id="@+id/label_amount"
                app:layout_constraintTop_toTopOf="@id/amount"
                app:layout_constraintBottom_toBottomOf="@id/amount"
                app:layout_constraintEnd_toStartOf="@id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="@color/payment_amount_hint"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:text="@string/money"
        />

        <TextView
                android:id="@+id/credit_card_name"
                app:layout_constraintTop_toBottomOf="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"
                android:layout_marginTop="24dp"
                tools:text="Mastercard 1234 •"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit_credit_card" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"/>

        <TextView
                android:id="@+id/edit_credit_card"
                app:layout_constraintStart_toEndOf="@+id/credit_card_name"
                android:foreground="?selectableItemBackgroundBorderless"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:textColor="@color/green"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:text="@string/edit"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/credit_card_name"/>

        <Button
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/pay"
                android:text="@string/pay"
                android:enabled="false"
                android:layout_marginBottom="12dp"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@drawable/selector_pay_button"
                style="@style/GreenButton"/>

        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline_left"
                app:layout_constraintGuide_begin="20dp"
                android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline_right"
                app:layout_constraintGuide_end="20dp"
                android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Group
                android:id="@+id/form_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="edit_credit_card,label_amount,userName,credit_card_name,amount,avatar,pay"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>